--- a/SyllabusEnergyEcon.Rmd
+++ b/SyllabusEnergyEcon.Rmd
@@ -130,6 +130,8 @@ The second resource in the library reserve is a Chapter 19 in Wooldridge's, "Int
 # The In-class Experience
 
 My goal is to make
+
++ PERSON ON ZOOM IS ALWAYS SCRIBE
 ## Table Reads
 
 There is a longer explanation of the table reads
@@ -157,7 +159,22 @@ The book is intended to be a fairly comprehensive, mostly non-technical, overvie
 
 We will focus on a few core topics with the class voting on the remaining topics depending on interest and term paper topics.
 
+Core Topics:
+
++ Introduction to Energy Economics, Ch 1: Brief introduction to the topic.
++ Energy Data and Energy Balance, Ch 2: Introduction to some units and energy balances.  Please note that the units are often oddly expressed in a mix of SI, US customary units and equivalents. Energy balance diagrams also have some quirks relating to how much energy is used to produce energy.
++ Energy Demand Analysis, Ch 3.1-3.6: This is the link to EC 311/415/201.  Please review your notes from these classes.  The final part of the chapter may be interesting to those that have taken Econometrics, EC469. 
++ Sectoral Energy Demand, Ch 4, We will use this chapter mostly as a gateway to learning about data sources.
++ Economic Analysis of Energy Investments, Ch 6, This is a brief version of part of EC 427 or EC 314. 
+
+After we complete the core topics we will vote on the next topic to address based on student interest.  These topics will include outside readings that bring the topics more up to date and to emphasize that this is an upper-division economics course as opposed to a lower division or non-economics course.
+
+
+Topic Options:
+
++ 
+
+
 # Policy Statements from the University
 
-```{r child = 'syllabus_common_files/psu_policy_statements.Rmd'}
-```
+
